feat(generateFromSpec): replace service functions with generated client from BE
